[gd_scene load_steps=68 format=3 uid="uid://m3vxcptun27u"]

[ext_resource type="Texture2D" uid="uid://dqr5dgag161as" path="res://assets/Homeless_3/Homeless_1/Attack_1.png" id="1_nvwpx"]
[ext_resource type="Script" path="res://scenes/enemy1.gd" id="1_rpkc5"]
[ext_resource type="Texture2D" uid="uid://jprjxlp5gtld" path="res://assets/Homeless_3/Homeless_1/Attack_2.png" id="2_l4o28"]
[ext_resource type="Texture2D" uid="uid://cro8udm0222ja" path="res://assets/Homeless_3/Homeless_1/Dead.png" id="3_1qej2"]
[ext_resource type="Texture2D" uid="uid://dps8barrif11h" path="res://assets/Homeless_3/Homeless_1/Hurt.png" id="4_facyo"]
[ext_resource type="Texture2D" uid="uid://df0jtvd5b3h5a" path="res://assets/Homeless_3/Homeless_1/Idle.png" id="5_brhow"]
[ext_resource type="Texture2D" uid="uid://g875n6ppn03e" path="res://assets/Homeless_3/Homeless_1/Idle_2.png" id="6_nobag"]
[ext_resource type="Texture2D" uid="uid://4wjei4sl8kim" path="res://assets/Homeless_3/Homeless_1/Special.png" id="7_ux28t"]
[ext_resource type="Texture2D" uid="uid://ca6gbaq64213p" path="res://assets/Homeless_3/Homeless_1/Walk.png" id="8_iqljm"]
[ext_resource type="AudioStream" uid="uid://cy6f4rto5n55w" path="res://audio/mixkit-impact-of-a-strong-punch-2155.mp3" id="10_mh7t6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vpyci"]
atlas = ExtResource("1_nvwpx")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0xn7"]
atlas = ExtResource("1_nvwpx")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhwaq"]
atlas = ExtResource("1_nvwpx")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pswap"]
atlas = ExtResource("1_nvwpx")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ut63t"]
atlas = ExtResource("1_nvwpx")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nn632"]
atlas = ExtResource("2_l4o28")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3s2ts"]
atlas = ExtResource("2_l4o28")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_80mht"]
atlas = ExtResource("2_l4o28")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmd0g"]
atlas = ExtResource("3_1qej2")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_awqjr"]
atlas = ExtResource("3_1qej2")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qruiq"]
atlas = ExtResource("3_1qej2")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6moyv"]
atlas = ExtResource("3_1qej2")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3rln"]
atlas = ExtResource("4_facyo")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8dv0m"]
atlas = ExtResource("4_facyo")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cn0cg"]
atlas = ExtResource("4_facyo")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lo2tg"]
atlas = ExtResource("5_brhow")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3hug5"]
atlas = ExtResource("5_brhow")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vgat"]
atlas = ExtResource("5_brhow")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_046el"]
atlas = ExtResource("5_brhow")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxulk"]
atlas = ExtResource("5_brhow")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_f650e"]
atlas = ExtResource("5_brhow")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5kjl0"]
atlas = ExtResource("6_nobag")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yujw"]
atlas = ExtResource("6_nobag")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_isayn"]
atlas = ExtResource("6_nobag")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sl3l4"]
atlas = ExtResource("6_nobag")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnw6l"]
atlas = ExtResource("6_nobag")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm5iv"]
atlas = ExtResource("6_nobag")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1od4"]
atlas = ExtResource("6_nobag")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsoa6"]
atlas = ExtResource("6_nobag")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jmlj"]
atlas = ExtResource("6_nobag")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uiqew"]
atlas = ExtResource("6_nobag")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsvvt"]
atlas = ExtResource("6_nobag")
region = Rect2(1280, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcx5l"]
atlas = ExtResource("7_ux28t")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_leqf6"]
atlas = ExtResource("7_ux28t")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekoxh"]
atlas = ExtResource("7_ux28t")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhjqc"]
atlas = ExtResource("7_ux28t")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbu3u"]
atlas = ExtResource("7_ux28t")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_buopc"]
atlas = ExtResource("7_ux28t")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rv52b"]
atlas = ExtResource("7_ux28t")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bvxqt"]
atlas = ExtResource("7_ux28t")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38oa"]
atlas = ExtResource("7_ux28t")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_podtw"]
atlas = ExtResource("7_ux28t")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvn68"]
atlas = ExtResource("7_ux28t")
region = Rect2(1280, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrisk"]
atlas = ExtResource("7_ux28t")
region = Rect2(1408, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggqm5"]
atlas = ExtResource("7_ux28t")
region = Rect2(1536, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcsc4"]
atlas = ExtResource("8_iqljm")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnckf"]
atlas = ExtResource("8_iqljm")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qasy"]
atlas = ExtResource("8_iqljm")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_upy4f"]
atlas = ExtResource("8_iqljm")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_br688"]
atlas = ExtResource("8_iqljm")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1uwl"]
atlas = ExtResource("8_iqljm")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulgry"]
atlas = ExtResource("8_iqljm")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_smvbw"]
atlas = ExtResource("8_iqljm")
region = Rect2(896, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_u0tyd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpyci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0xn7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhwaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pswap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ut63t")
}],
"loop": true,
"name": &"attack",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nn632")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3s2ts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80mht")
}],
"loop": true,
"name": &"attack1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmd0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awqjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qruiq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6moyv")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3rln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8dv0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cn0cg")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lo2tg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hug5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vgat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_046el")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxulk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f650e")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5kjl0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yujw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_isayn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sl3l4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnw6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm5iv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1od4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsoa6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jmlj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uiqew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsvvt")
}],
"loop": true,
"name": &"idle2",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qcx5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_leqf6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekoxh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhjqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbu3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_buopc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rv52b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvxqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38oa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_podtw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvn68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrisk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggqm5")
}],
"loop": true,
"name": &"special",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcsc4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnckf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qasy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_upy4f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_br688")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1uwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulgry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smvbw")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_o6u3i"]
radius = 18.0
height = 78.0

[sub_resource type="CircleShape2D" id="CircleShape2D_8r4d5"]
radius = 87.367

[sub_resource type="CircleShape2D" id="CircleShape2D_8bo33"]
radius = 39.8497

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_rpkc5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = 0.000170016
sprite_frames = SubResource("SpriteFrames_u0tyd")
animation = &"idle2"
frame_progress = 0.228794

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 29)
shape = SubResource("CapsuleShape2D_o6u3i")

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(0, 29)
shape = SubResource("CircleShape2D_8r4d5")

[node name="enemy_hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
position = Vector2(1, 28)
shape = SubResource("CircleShape2D_8bo33")

[node name="take_dmg_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="health_bar" type="ProgressBar" parent="."]
modulate = Color(1, 0.00784314, 0, 1)
offset_left = -26.0
offset_top = 69.0
offset_right = 66.0
offset_bottom = 76.0
scale = Vector2(0.5, 0.5)
show_percentage = false

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_mh7t6")

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="take_dmg_cooldown" to="." method="_on_take_dmg_cooldown_timeout"]
